--- a/netbanking.html
+++ b/netbanking.html
@@ -12,6 +12,8 @@
         <br>
         <input type="submit" value="login">
         <input type="reset" value="cancel">
+        <br>
+        click here to register <a href="register.html">register</a>
       </h3>
      <form>
     </body>
