--- a/link.html
+++ b/link.html
@@ -4,7 +4,10 @@
   </head>
   <body>
     <a href="home.html">home</a>
-    <a href="home">home</a>
+    <a href="services.html">|services</a>
+    <a href="aboutUs.html">|aboutUs</a>
+    <a href="contactUs.html">|contactUs</a>
+    <a href="netbanking.html">netbanking</a>
     
     </body>
       </html>
