--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <h1>Welcome..!</h1>
+<a href="home.html">home</a>
+    <a href="services.html">|services</a>
+    <a href="aboutUs.html">|aboutUs</a>
+    <a href="contactUs.html">|contactUs</a>
+    <a href="netbanking.html">netbanking</a>
 
