--- a/home.html
+++ b/home.html
@@ -1,1 +1,5 @@
-<a href="index.html"></a>
+<a href="home.html">home</a>
+<a href="services.html">|services</a>
+    <a href="aboutUs.html">|aboutUs</a>
+    <a href="contactUs.html">|contactUs</a>
+    <a href="netbanking.html">netbanking</a>
