--- a/home.html
+++ b/home.html
@@ -2,4 +2,4 @@
 <a href="services.html">|services</a>
     <a href="aboutUs.html">|aboutUs</a>
     <a href="contactUs.html">|contactUs</a>
-    <a href="netbanking.html">netbanking</a>
+    <a href="netbanking.html">|netbanking</a>
