--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-    <a href="index.html">home</a>    
+    <a href="main.html">home</a>    
     <a href="services.html">|services</a>
     <a href="aboutUs.html">|aboutUs</a>
     <a href="contactUs.html">|contactUs</a>
