--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 
     <a href="main.html">home</a>    
-    <a href="services.html">|services</a>
-    <a href="aboutUs.html">|aboutUs</a>
-    <a href="contactUs.html">|contactUs</a>
-    <a href="netbanking.html">|netbanking</a>
+    <a href="services.html">services</a>
+    <a href="aboutUs.html">aboutUs</a>
+    <a href="contactUs.html">contactUs</a>
+    <a href="netbanking.html">netbanking</a>
   
