--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-    
+    <a href="index.html">home</a>
     <a href="services.html">services</a>
     <a href="aboutUs.html">aboutUs</a>
     <a href="contactUs.html">contactUs</a>
