--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
     <h1>Welcome to banking..!</h1>
+    <hr>
     <a href="index.html">home</a>
-    <a href="services.html">services</a>
-    <a href="aboutUs.html">aboutUs</a>
-    <a href="contactUs.html">contactUs</a>
-    <a href="netbanking.html">netbanking</a>
+    <a href="services.html">|services</a>
+    <a href="aboutUs.html">|aboutUs</a>
+    <a href="contactUs.html">|contactUs</a>
+    <a href="netbanking.html">|netbanking</a>
   
