--- a/netbanking.html
+++ b/netbanking.html
@@ -13,7 +13,7 @@
         <input type="submit" value="login">
         <input type="reset" value="cancel">
         <br>
-        click here to register <a href="register.html">register</a>
+        click here to <a href="register.html">register</a>
       </h3>
      <form>
     </body>
